<resources>
    <string name="app_name">Agora API Example</string>
    <string name="inject">Inject</string>
    <string name="stopinject">StopInject</string>
    <string name="publish">Publish</string>
    <string name="stoppublish">StopPublish</string>
    <string name="url">Url</string>
    <string name="channel_id">Channel ID</string>
    <string name="url_rte">Input RTE Url</string>
    <string name="token" translatable="false">Token</string>
    <string name="app_id" translatable="false">App ID</string>
    <string name="ex_channel_id">Destination Channel ID</string>
    <string name="encryption_password">Encryption Password</string>
    <string name="join">Join</string>
    <string name="blur">Open Blur</string>
    <string name="open">Open</string>
    <string name="closeblur">Close Blur</string>
    <string name="leave">Leave</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="unpublish">Unpublish</string>
    <string name="permission">Please granted the request permissions</string>
    <string name="earpiece">Earpiece</string>
    <string name="speaker">Speaker</string>
    <string name="openmicrophone">OpenMicrophone</string>
    <string name="closemicrophone">CloseMicrophone</string>
    <string name="closesuperr">Close Super Resolution</string>
    <string name="opensuperr">Open Super Resolution</string>
    <string name="sendmeta">Send Metadata</string>
    <string name="quickswitchtips">Make sure you have set up the channel as the comments in the QuickSwitchChannel class say, or you will see a blank.</string>
    <string name="nobroadcaster">Waiting for the broadcaster</string>
    <string name="channelstr">Channel:%s</string>
    <string name="swiptips">You can swipe left and right to switch channels</string>
    <string name="selectrole">Please choose your role</string>
    <string name="broadcaster">BROADCASTER</string>
    <string name="audience">AUDIENCE</string>
    <string name="localvideo">LocalVideo</string>
    <string name="screenshare">ScreenShare</string>
    <string name="publish_camera">Publish Camera</string>
    <string name="camera">Camera</string>
    <string name="rendermode">RenderMode:%s</string>
    <string name="alert_no_local_video_message">Local video share will not be accessible.\n Please copy your MP4 video file to %s and change the name as localvideo.mp4.</string>
    <string name="alert_no_local_audio_message">Local audio share will not be accessible.\n Please copy your PCM audio file to %s and change the name as bgm.pcm.</string>
    <string name="lowversiontip">The system version is too low to use this feature; please use Android 5.0 System.</string>
    <string name="resolution">Resolution</string>
    <string name="framerate">Frame Rate</string>
    <string name="video_orientation">Video Orientation</string>
    <string name="ORIENTATION_MODE_ADAPTIVE">Adaptive</string>
    <string name="ORIENTATION_MODE_FIXED_LANDSCAPE">Fixed Landscape</string>
    <string name="ORIENTATION_MODE_FIXED_PORTRAIT">Fixed Portrait</string>
    <string name="chanel_support_char" translatable="false">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890 !#$%()+-:;&lt;=.>?@[]^_{}|~,&amp;</string>
    <string name="fit" translatable="false">Fit</string>
    <string name="hidden" translatable="false">Hidden</string>
    <string name="setting">Setting</string>
    <string name="sdkversion">SDK Version</string>
    <string name="sdkversion1">V%s</string>
    <string name="sent">Sent:%s</string>
    <string name="received">Received:%s</string>
    <string name="bgm_off">BGM OFF</string>
    <string name="bgm_on">BGM ON</string>
    <string name="effect_on">Effect ON</string>
    <string name="effect_off">Effect OFF</string>
    <string name="mixing_volume">Mixing Volume</string>
    <string name="bitrate">Bitrate</string>
    <string name="ok">OK</string>
    <string name="enable_3d_voice">3D Voice</string>
    <string name="enable_pitch">Pitch Correction</string>
    <string name="_3d_voice_circle_in_second">3D Voice Circle in Second</string>
    <string name="enable_publish">Start Co-host</string>
    <string name="disnable_publish">Stop Co-host</string>
    <string name="enable_low_latency">Enable Ultra Low Latency</string>
    <string name="disable_low_latency">Disable Ultra Low Latency</string>
    <string name="next">Next Step</string>
    <string name="ai_denoise">AI Denoise</string>
    <string name="loopback">Audio Loopback</string>
    <string name="publish_only_audio">publish audio</string>
    <string name="microphone">Microphone</string>
    <string name="publish_local_audio">Publish Local Audio</string>
    <string name="play_locally">Play Locally</string>
    <string name="local_video">Local Video</string>
    <string name="streaming_mode">Enhanced Low Latency</string>
    <string name="preload">Preload</string>
    <string name="item_joinaudio">Live Interactive Audio Streaming</string>
    <string name="item_joinvideo">Live Interactive Video Streaming</string>
    <string name="item_joinvideo_by_token">Live Interactive Video Streaming(Token Verify)</string>
    <string name="item_quickswitck">Quick Switch Channel</string>
    <string name="item_adjustvolume">Adjust the Volume</string>
    <string name="item_joinmultichannel">Join Multiple Channel</string>
    <string name="item_precalltest">Pre-call Tests</string>
    <string name="item_hostacrosschannel">Relay Streams across Channels</string>
    <string name="item_setaudioprofile">Set the Audio Profile</string>
    <string name="item_playaudiofiles">Play Audio Files</string>
    <string name="item_voiceeffects">Set the Voice Beautifier and Effects</string>
    <string name="item_mediaplayer">MediaPlayer</string>
    <string name="item_audiorouter_player">AudioRouter(Third Party Player)</string>
    <string name="item_audiowaveform">Audio Waveform</string>
    <string name="item_geofencing">Regional Connection</string>
    <string name="item_rtmpstreaming">Push Streams to CDN</string>
    <string name="item_rtctortmp">Streaming from RTC to CDN</string>
    <string name="item_rtmpinjection">Inject Online Media Stream</string>
    <string name="item_pushexternal">Custom Video Source</string>
    <string name="item_multiVideoSourceTracks">Multi Video Source Tracks</string>
    <string name="item_switchexternal">Switch Video Sources</string>
    <string name="item_cameraorscreen">Multiple Video Sources</string>
    <string name="item_screensharing">Scree Sharing</string>
    <string name="item_customaudiosource">Custom Audio Sources</string>
    <string name="item_customaudiorender">Custom Audio Render</string>
    <string name="item_customremoterender">Custom Video Renderer</string>
    <string name="item_processraw">Raw Video Data</string>
    <string name="item_mediametadata">Media Metadata</string>
    <string name="item_streamencrypt">Media Stream Encryption(Custom Encoder)</string>
    <string name="item_channelencryption">Media Stream Encryption</string>
    <string name="item_setvideoprofile">Set the Video Profile</string>
    <string name="item_superresolution">Super Resolution</string>
    <string name="item_livestreaming">RTC Live Streaming</string>
    <string name="item_twoProcessScreenShare">Multi Process - Screen Sharing</string>
    <string name="item_raw_audio">Raw Audio Data</string>
    <string name="item_ext">Simple Extension</string>
    <string name="item_senddatastream">Send Data Stream</string>
    <string name="item_arcore">ARCore</string>
    <string name="item_spatial_sound">Spatial Audio</string>
    <string name="item_content_inspect">Content Inspect</string>
    <string name="item_picture_in_picture">Picture In Picture</string>
    <string name="item_third_party_beauty">Third-party beauty</string>
    <string name="item_agora_beauty">Agora beauty 2.0</string>
    <string name="item_ktv_copyright_music">KTV Copyright Music</string>
    <string name="item_media_recorder">Local/Remote MediaRecorder</string>
    <string name="item_localvideotranscoding">LocalVideoTranscoding</string>
    <string name="item_face_capture">Face Capture</string>
    <string name="item_simulcast">Simulcast</string>
    <string name="item_multipath">Multipath</string>
    <string name="joinchannelaudio">This example demonstrates how to use the SDK to join channels for voice only calls.</string>
    <string name="joinchannelvideo">This example demonstrates how to use the SDK to join channels for audio and video calls.</string>
    <string name="joinchannelvideoByToken">This example demonstrates how to use the SDK to join channels by token for audio and video calls.</string>
    <string name="adjustvolume">This example demonstrates how to use the SDK to adjust in cal volume.</string>
    <string name="precalltest">This example demonstrates how to use the SDK to check uplink network condition before joining the  channel.</string>
    <string name="customaudio">This example demonstrates how to use mediaOption API to publish microphone and custom audio source. </string>
    <string name="customaudiorender">This example demonstrates how to customize the functions of the remote audio stream renderer during audio and video calls. </string>
    <string name="customremoterender">This example demonstrates how to customize the functions of the remote video stream renderer during audio and video calls.</string>
    <string name="processrawdata">This example demonstrates how to obtain raw data through callback during audio and video calls, and how to return the data to the SDK after processing.\nPS:Bare data includes video frames and audio frames</string>
    <string name="pushexternalvideo">This example demonstrates how to use the active push mode to collect video during audio and video calls.</string>
    <string name="multivideosourcetracks">This example demonstrates how to use create video track api to collect video during audio and video calls.</string>
    <string name="quickswitchchannel">This example demonstrates how to quickly switch channels during audio and video calls.</string>
    <string name="joinmultichannel">This example demonstrates how to join multiple channels during audio and video calls.</string>
    <string name="rtmpinjection">This example demonstrates how to input and render an online media stream during an audio and video call.</string>
    <string name="rtmpstreaming">This example demonstrates how to use the bypass streaming function during an audio and video call.\nPS:Need to cooperate with RTMP server to realize the function.</string>
    <string name="streamencrypt">This example demonstrates how to encrypt and decrypt audio and video frames during audio and video calls.</string>
    <string name="switchexternalvideo">This example demonstrates how to use MediaIO to collect video and share screen during audio and video call.</string>
    <string name="switchcamerascreen">This example demonstrates how video can be flexibly switched between the camera stream and the screen share stream during an audio-video call.</string>
    <string name="content_inspect_result_tip">Please obtain the pornographic identification results through the console webhook.</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="content_inspect_tip">You can use the camera to point the picture to check the yellowing effect</string>
    <string name="remote_screenshot">Remote screenshot</string>
    <string name="watermark">Watermark</string>
    <string name="low_stream">Low Stream</string>
    <string name="float_window_show">Show Float Window</string>
    <string name="stop_mic">Stop Microphone Record</string>
    <string name="stop_all_effect">Stop All Effect</string>
    <string name="stop_audio_mixing">Stop Audio Mixing</string>
    <string name="transparent_background">TransparentBackground</string>
</resources>