<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".examples.basic.JoinChannelAudio">


    <Switch
        android:id="@+id/microphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microphone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:checked="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"/>

    <Switch
        android:id="@+id/localAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="110dp"
        android:text="@string/publish_local_audio" />

    <Switch
        android:id="@+id/playLocally"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:text="@string/play_locally"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:digits="@string/chanel_support_char"
            android:layout_weight="1"
            android:hint="@string/channel_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

</RelativeLayout>
