<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".examples.advanced.LiveStreaming">

    <FrameLayout
        android:id="@+id/fl_video_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_join">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <io.agora.api.example.common.widget.VideoReportLayout
                android:id="@+id/background_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <io.agora.api.example.common.widget.VideoReportLayout
                android:id="@+id/foreground_video"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>


    <Button
        android:id="@+id/btn_float_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch_low_stream"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#dddddd"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/float_window_show" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_low_stream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch_watermark"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#dddddd"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/low_stream" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_watermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_take_shot"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#dddddd"
        android:enabled="false"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/watermark" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_take_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_latency"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/remote_screenshot" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_latency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_publish"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/enable_low_latency" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_join"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/enable_publish" />

    <LinearLayout
        android:id="@+id/ll_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/chanel_support_char"
            android:hint="@string/channel_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

</RelativeLayout>
