<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".examples.advanced.SetAudioProfile">

    <Switch
        android:id="@+id/aidenoise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="340dp"
        android:enabled="false"
        android:text="@string/ai_denoise" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="200dp"
        android:enabled="false"
        android:text="@string/closemicrophone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker"
        android:enabled="false"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/btn_mute"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/audio_profile_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/audio_scenario_spinner"
        android:layout_marginBottom="16dp"
        android:entries="@array/audioProfile"
        android:hint="Select an Audio Profile"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/audio_scenario_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@id/ll_join"
        android:layout_marginBottom="16dp"
        android:entries="@array/audioScenario"
        android:hint="Select an Audio Scenario"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:id="@+id/ll_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/chanel_support_char"
            android:hint="@string/channel_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

</RelativeLayout>