<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".examples.basic.JoinChannelVideo">


    <io.agora.api.example.common.widget.VideoReportLayout
        android:id="@+id/videoReportLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_transparent_background"/>


    <Switch
        android:id="@+id/btn_transparent_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transparent_background"
        android:layout_above="@+id/ll_join"
        android:layout_marginVertical="12dp"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:id="@+id/ll_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_channel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="@string/chanel_support_char"
            android:hint="@string/channel_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

</RelativeLayout>
