<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:gravity="end"
    android:paddingHorizontal="30dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/sw_stop_mic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:text="@string/stop_mic" />

    <Switch
        android:id="@+id/sw_stop_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        android:text="@string/stop_all_effect" />

    <Switch
        android:id="@+id/sw_stop_mixing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:visibility="gone"
        android:text="@string/stop_audio_mixing" />

</LinearLayout>